# TechminoBackend

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json  mail.html  main.cc
.github/workflows/: build_drogon.yml  build_release.yml  build_windows.yml  check_dependencies.yml  function_test.yml  ubuntu_test.yml
.unfinished/controllers/: App_HTTP.cc  App_HTTP.h  Auth.cc  Auth.h  Play_HTTP.cc  Play_HTTP.h  User_HTTP.cc  User_HTTP.h
.unfinished/services/: App_HTTP.cc  App_HTTP.h  Auth.cc  Auth.h  Play_HTTP.cc  Play_HTTP.h  User_HTTP.cc  User_HTTP.h
.unfinished/structures/: Player.cc  Player.h
.unused/: _PlayManager.cc  _PlayManager.h  _Room.cc  _Room.h  _RoomManager.cc  _RoomManager.h  communication_manager.cc  communication_manager.h
controllers/: App.cpp  App.h  App_HTTP.cc  App_HTTP.cpp  App_HTTP.h  App_WS.cc  App_WS.h  Auth.cpp  Auth.h  Base_WS.cc  Base_WS.h  Chat_WS.cc  Chat_WS.cpp  Chat_WS.h  Manage_WS.cc  Manage_WS.h  Play.cpp  Play.h  Play_HTTP.cpp  Play_HTTP.h  Play_WS.cc  Play_WS.cpp  Play_WS.h  Stream_WS.cc  Stream_WS.h  User.cpp  User.h  User_HTTP.cc  User_HTTP.h  User_WS.cc  User_WS.h  api.cc  api.h  tech_api_v1.cc  tech_api_v1.h  tech_socket_v1.cc  tech_socket_v1.h  websocket.cc  websocket.h
filters/: App.cc  App.h  Chat.cc  Chat.h  Manage.cc  Manage.h  Play.cc  Play.h  Stream.cc  Stream.h  User.cc  User.h
lib_models/: .gitignore
models/: App.cc  App.h  Auth.cc  Auth.h  Data.cc  Data.h  Info.cc  Info.h  Message.cc  Message.h  Users.cc  Users.h  model.json
plugins/: ChatManager.cc  ChatManager.h  Configurator.cc  Configurator.h  PlayManager.cc  PlayManager.h  tech_plugin_RoomManager.cc  tech_plugin_RoomManager.h  tech_plugin_VersusManager.cc  tech_plugin_VersusManager.h
services/: App.cpp  App.h  App_HTTP.cc  App_HTTP.cpp  App_HTTP.h  App_WS.cc  App_WS.cpp  App_WS.h  Auth.cc  Auth.cpp  Auth.h  Base_WS.cc  Base_WS.h  Chat_WS.cc  Chat_WS.cpp  Chat_WS.h  Manage_WS.cc  Manage_WS.h  Play.cpp  Play.h  Play_HTTP.cc  Play_HTTP.cpp  Play_HTTP.h  Play_WS.cc  Play_WS.cpp  Play_WS.h  Player.cpp  Player.h  Room.cc  Room.h  RoomManager.cc  RoomManager.h  Stream_WS.cc  Stream_WS.h  User.cc  User.cpp  User.h  User_HTTP.cc  User_HTTP.h  User_WS.cc  (+1 more)
utils/: Authorizer.cpp  Authorizer.h  Crypto.cc  Crypto.h  Http.cpp  Http.h  Utils.cpp  Utils.h  WebSocket.cpp  WebSocket.h  authorizer.cpp  authorizer.h  communication_manager.cc  communication_manager.h  crypto.cc  crypto.h  httpRequest.cpp  httpRequest.h  httpResponse.cpp  httpResponse.h  room.cc  room.cpp  room.h  room_manager.cc  room_manager.h  utils.cpp  utils.h
